# LIGO

./: .gitignore  .gitlab-ci-npm.yml  .gitlab-ci.yml  .gitmodules  .ocamlformat  CONTRIBUTORS.md  Dockerfile  HACKING.md  INSTALL.md  Makefile  WindownInstaller.nsi  WindowsInstaller.nsi  a.out  changelog.txt  create-windows-installer.ps1  demo-webide.js  deploy_jsoo.sh  dev.sh  dune  dune-project  editor.js  esy-backup.json  esy.foo.json  esy.json  esy.with-unused.json  esy.without-tz.json  flake.nix  foo.ml  gen-opam-packages.js  gen-opam-packages.sh  gitlab-ci-foo.yml  index.html  index.json  input-request.txt  libs.json  libs.txt  ligo-runtime.opam.locked  ligo.opam  ligo.opam.locked  ligo_unix.ml  (+10 more)
src/main/api/: api_helpers.ml  compile.ml  dune  formatter.ml  info.ml  init.ml  ligo_api.ml  ligo_api.mli  ligo_api_common.ml  ligo_init.ml  mutate.ml  print.ml  run.ml  test.mligo  transpile.ml
src/main/api/common/: compile.ml  dialect_cst.ml  print.ml  run.ml  transpile.ml
src/main/api/run_meta_files/: dry_run.mligo  dune  run_meta_files.ml
src/passes/01-lexing/jsligo/: JsligoLexerJS.ml  LexerJS.ml  LexerMain.ml  PreParser.mly  Self_tokens.ml  dune
src/passes/02-parsing/: cameligo.ml  cameligo.mli  cst_type.ml  dune  jsligo.ml  jsligo.mli  parsing.ml  pascaligo.ml  pascaligo.mli  reasonligo.ml  reasonligo.mli
src/passes/02-parsing/cameligo/: ParToken.mly  Parser.mly  ParserMain.ml  Pretty.ml  Pretty.mli  dune  errors.msg.in
src/passes/02-parsing/jsligo/: ParToken.mly  Parser.mly  Pretty.ml  Pretty.mli  dune  errors.msg.in
src/passes/02-parsing/pascaligo/: JsLIGO.ml  ParToken.mly  Parser.mly  Pretty.ml  Pretty.mli  dune  errors.msg.in
src/passes/02-parsing/pyligo/: ParToken.mly  Parser.mly  Pretty.ml  dune  errors.msg.in
src/passes/02-parsing/reasonligo/: ParserMain.ml  Pretty.ml  Pretty.mli  dune
src/passes/02-parsing/shared/: Common.ml  Common.mli  ParserMainGen.ml  dune
src/passes/03-PoC/: ast.ml  combinators.ml  dune
src/passes/03-PoC/pascaligo/: compiler.ml  dune
src/passes/03-unification/: dune  unification.ml
src/passes/03-unification/ast_unified/: PP.ml  ast_unified.ml  combinators.ml  dune  formatter.ml  to_yojson.ml  types.ml
src/passes/03-unification/cameligo/: cameligo.ml  cameligo.mli  compile.ml  decompile.ml  dune
src/passes/03-unification/jsligo/: compile.ml  decompile.ml  dune  jsligo.ml  jsligo.mli
src/passes/03-unification/pascaligo/: compile.ml  decompile.ml  dune  pascaligo.ml  pascaligo.mli
src/passes/03-unification/shared/: dune  errors.ml  helpers.ml
src/passes/04-small_passes/passes/: array_to_tuple.ml  assign_transitivity.ml  curry.ml  dune  e_rev_app.ml  errors.ml  export_declaration.ml  freeze_containers.ml  freeze_operators.ml  generalize_functions.ml  hack_literalize_jsligo.ml  if_as_pattern_match.ml  import_restriction.ml  initial_node_check.ml  let_syntax.ml  linearity.ml  list_as_function.ml  loop_variable.ml  match_as_function.ml  module_open_restriction.ml  multi_bindings.ml  named_fun.ml  object_to_record.ml  pass_example.ml  pass_type.ml  pattern_restriction.ml  projections.ml  reduce_sequence.ml  reduce_switch.ml  remove_t_arg.ml  restrict_t_app.ml  returns.ml  structural_assignments.ml  structural_updates.ml  syntactic_hack.ml  t_app_michelson_types.ml  t_arg.ml  top_level_restriction.ml  type_abstraction_declaration.ml  unify_fun.ml  (+2 more)
src/passes/14-wasm/: .ocamlformat  BUILD.MD  Makefile  OVERVIEW.md  README.md  STORAGE.MD  Serialization.md  closure_conversion.ml  cmmgen.ml  compiler.ml  datatype.ml  default_env.ml  default_module.ml  dune  env.ml  errors.ml  helpers.ml  interop.ml  lift.ml  linker.ml  mem_helpers.ml  start.c  start.wasm  start.wat  validation.ml  wat_helpers.wat
src/passes/14-wasm/include/: comparison.h  red_black_tree.h
src/passes/14-wasm/runtime/: .gitignore  Makefile  README.md  dune
src/passes/14-wasm/wabt/: build.sh  dune
src/passes/14-wasm/wasi/: .gitignore  (+2 more)
src/passes/16.5-self_mini_c_coq/: dune  errors.ml  helpers.ml  michelson_restrictions.ml  self_mini_c.ml  uncurry.ml
src/stages/4-ast_core/: PP.ml  combinators.ml  compare.ml  compare_enum.ml  dune  environment.ml  environment.mli  helpers.ml  misc.ml  misc.mli  to_yojson.ml  types.ml
src/stages/5-ast_typed/: PP.ml  PP_annotated.ml  combinators.ml  compare.ml  compare_enum.ml  dune  environment.ml  environment.mli  formatter.ml  helpers.ml  misc.ml  misc.mli  ppx_map.ml  ppx_woo.ml  to_yojson.ml  types.ml
src/stages/common/: PP.ml  PP_enums.ml  backends.ml  constant.ml  dune  enums.ml  fold_maps.ml  folds.ml  helpers.ml  maps.ml  ppx_mod_po.ml  ppx_only_interpreter_tags.ml  to_yojson.ml  types.ml  var.ml  var.mli
vendored-dune/ligo-utils/memory-proto-alpha/: dune  memory_proto_alpha.ml  tezos-memory-proto-alpha.opam
vendors/WasmObjectFile/: README.md  WasmObjectFile.opam  arrange.ml  arrange.mli  ast.ml  ast.ml.orig  dune  dune-project  encode.ml  f32.ml  float.ml  lexer.mll  linking.ml  operators.ml  parse.ml  parser copy.mly  parser.mly  print.ml  print.mli  sexpr.ml  sexpr.mli  types.ml  values.ml
vendors/WasmObjectFile/test/: README.md  check_lld.sh  dune  get_wabt.sh  test.ml  test_result.sh
vendors/ligo-runtime/: .gitignore  Cargo.toml  Makefile  dune  ligo-runtime.opam  run.sh  rustfmt.toml
vendors/ligo-runtime/macros/: Cargo.toml  README.md
vendors/ligo-runtime/runtime/: Cargo.toml
vendors/ligo-runtime/src/: datatype.rs  lib.rs  runtime.rs
vendors/ligo-utils/client_utils-009-PsFLoren/: client_utils-009-PsFLoren.opam  dune  dune-project  michelson_v1_error_reporter.ml  michelson_v1_parser.ml  operation_result.ml  operation_result.mli
vendors/ligo-utils/client_utils_009-PsFLoren/: README.md  client_proto_args.ml  client_utils-009-PsFLoren.opam  dune  michelson_v1_error_reporter.ml  michelson_v1_printer.ml  michelson_v1_printer.mli
vendors/ligo-utils/ppx_postfix/: README  dune  dune-project  ppx_postfix.ml  ppx_postfix.opam
vendors/ligo-utils/proto-alpha-utils/: dune  dune-project  init_proto_alpha.ml  proto-alpha-utils.opam  proto_alpha_utils.ml  x_error_monad.ml  x_memory_proto_alpha.ml
(+2857 files in other folders)
