name: "ligo"
opam-version: "2.0"
maintainer: "Galfour <contact@ligolang.org>"
authors: [ "Galfour" ]
homepage: "https://gitlab.com/ligolang/tezos"
bug-reports: "https://gitlab.com/ligolang/tezos/issues"
synopsis: "A high-level language which compiles to Michelson"
dev-repo: "git+https://gitlab.com/ligolang/tezos.git"
license: "MIT"
# If you change the dependencies, run `opam lock` in the root
depends: [
  "odoc" { build }
  "ocamlfind" { build }
  "dune" { build & >= "2.7.1" & < "2.9" }
  "menhir" { = "20200624" }
  "ocamlgraph"
  "coq" { build & >= "8.12" & < "8.14" }
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_expect"
  "tezos-011-PtHangzH-test-helpers"
  "yojson"
  "alcotest" { with-test & >= "1.0" & < "1.1" }
  "getopt"
  "terminal_size"
  "pprint"
  "linenoise"
  "qcheck"
  "tezos-clic"
  # work around upstream in-place update
  "ocaml-migrate-parsetree" { = "2.1.0" }
  # work around tezos' failure to constrain
  "lwt" { = "5.4.2" }
  "bisect_ppx" {dev & >= "2.5.0"}
  # dependencies of vendored dependencies
  "tezos-base"
  "tezos-crypto"
  "tezos-micheline"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
pin-depends: [
  [ "tezos-protocol-environment.dev" "./vendors/tezos/src/lib_protocol_environment" ]
  [ "tezos-protocol-011-PtHangzH.dev" "./vendors/tezos/src/proto_011_PtHangzH/lib_protocol" ]
  [ "tezos-011-PtHangzH-test-helpers.dev" "./vendors/tezos/src/proto_011_PtHangzH/lib_protocol/test/helpers" ]
]
