(library
 (name ligo_runtime)
 (public_name ligo-runtime)
 (c_library_flags
  (-lpthread -lc -lm))
 )

(rule
 (enabled_if
  (= %{profile} release))
 (targets libligo_runtime.a dllligo_runtime.so)
 (deps
  (source_tree runtime/))
 (action
  (progn
   (run cargo build --lib --target wasm32-unknown-unknown --release)
   (run
    sh
    -c
    "cp ./target/wasm32-unknown-unknown/release/libligo_runtime.so ./dllligo_runtime.so 2> /dev/null || cp ./target/wasm32-unknown-unknown/release/libligo_runtime.dylib ./dllligo_runtime.so")
   (run
    cp
    ./target/wasm32-unknown-unknown/release/libligo_runtime.a
    ./libligo_runtime.a))))

(rule
 (enabled_if
  (= %{profile} debug))
 (targets libligo_runtime.a dllligo_runtime.so)
 (deps
  (source_tree runtime/))
 (action
  (progn
   (run cargo build --lib --target wasm32-unknown-unknown)
   (run
    sh
    -c
    "cp ./target/wasm32-unknown-unknown/debug/libligo_runtime.so ./dllligo_runtime.so 2> /dev/null || cp ./target/wasm32-unknown-unknown/debug/libligo_runtime.dylib ./dllligo_runtime.so")
   (run
    cp
    ./target/wasm32-unknown-unknown/debug/libligo_runtime.a
    ./libligo_runtime.a))))