opam-version: "2.0"
maintainer: "info@ligolang.org"
authors: ["sander<removethis>mail@gmail.com"]
homepage: "https://gitlab.com/ligolang/ligolang"
bug-reports: "https://gitlab.com/ligolang/ligolang/issues"
synopsis: "Ligo Runtime for WebAssembly"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {build}
]