(library
 (name ligo_api_common)
 (public_name ligo.api-common)
 (instrumentation
  (backend bisect_ppx))
 (libraries simple-utils ligo.decompile ligo.scopes build interpreter bos
   cli_helpers tar decompress.gz))

(rule
 (targets changelog.ml)
 (deps
  (env_var CHANGELOG_PATH))
 (action
  (with-stdout-to
   changelog.ml
   (run "sh" "-c"
     "printf 'let changelog = {changelog|%s|changelog}' \"$(cat ${CHANGELOG_PATH:-../../../gitlab-pages/docs/intro/changelog.md})\""))))
