;; Build of all LIGO parsers as a library

(library
 (name cst_type)
 (public_name ligo.parsing_cst_type)
 (instrumentation
  (backend bisect_ppx))
 (libraries cst)
 (modules Cst_type))

(library
 (name parsing)
 (public_name ligo.parsing)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ;; Vendors
  simple-utils
  ;; LIGO
  parsing_shared
  parsing_cameligo
  parsing_jsligo
  preprocessing_cameligo
  preprocessing_jsligo
  cst_type)
 (modules Parsing Errors Cameligo Jsligo))
