(library
 (name wasm_pass)
 (public_name ligo.wasm_pass)
  (preprocess
  (pps ppx_expect ppx_poly_constructor))
 (libraries 
  mini_c
  WasmObjectFile
  stage_common
 )
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils -open
    Tezos_utils)))


  ; ; TODO: get this properly compiling... 
  ; (rule
  ;  (targets start.wasm)
  ;  (action 
  ;   (run 
  ;     "../../../vendors/wasi/wasi-sdk-14.0/bin/clang -c -g start.c -o start.wasm"
  ;   )
  ;  ))