(library
 (name wasm_pass)
 (public_name ligo.wasm_pass)
 (preprocess
  (pps ppx_expect ppx_poly_constructor))
 (libraries mini_c WasmObjectFile ligo_prim ligo_runtime ligo_wasi ligo_wabt)
 (flags
  (:standard
   -w
   +1..62-4-9-44-40-42-48-30@39@33
   -open
   Simple_utils
   -open
   Tezos_utils)))

(rule
 (targets wat_helpers.wasm)
 (action
  (progn
   (run
    wabt/wat2wasm
    wat_helpers.wat
    -r
    --disable-reference-types
    -o
    wat_helpers.wasm)
   ; (run touch foo.ml)
   ))
 (deps wat_helpers.wat))

(install
 (section
  (site
   (ligo ligo_helpers)))
 (files
  (wat_helpers.wasm as wat_helpers.wasm)))
