(library
  (name ast_core)
  (public_name ligo.ast_core)
  (instrumentation (backend bisect_ppx))
  (libraries
    simple-utils
    stage_common
    ast_sugar
    UnionFind
  )
  (modules ast_core combinators types helpers misc reasons compare compare_enum to_yojson PP environment formatter)
  (preprocess (pps ppx_incr))
  (flags (:standard -open Simple_utils ))
)

(library
 (name ppx_incr)
 (kind ppx_rewriter)
 (modules ppx_incr)
 (libraries ppxlib))