(library
  (name ast_typed)
  (public_name ligo.ast_typed)
  (instrumentation (backend bisect_ppx))
  (libraries
    simple-utils
    ast_core
    stage_common
    UnionFind
  )
  (modules ast_typed combinators compare compare_enum environment formatter helpers misc reasons to_yojson types PP PP_annotated)
;;  (modules_without_implementation generated_fold_x)
  (flags (:standard -open Simple_utils))
  (preprocess (staged_pps ppx_import ppx_woo ppx_map))
)

(library
  (name ppx_woo)
  (kind ppx_deriver)
  (libraries
    base
    ppxlib)
  (modules ppx_woo)
  (preprocess (pps ppxlib.metaquot))
)

(library
  (name ppx_map)
  (kind ppx_rewriter)
  (libraries
    base
    simple-utils
    ppxlib)
  (modules ppx_map)
  (preprocess (pps ppxlib.metaquot))
)
