(library
  (name stage_common)
  (public_name ligo.stage_common)
  (instrumentation (backend bisect_ppx))
  (modules PP PP_enums ast_common backends constant debug enums fold_maps folds helpers maps of_yojson test to_yojson types)
  (libraries
    simple-utils
    zarith
    hex
    tezos-utils
  )
  (inline_tests)
  (preprocess
    (staged_pps ppx_import ppx_expect ppx_only_interpreter_tags)
  )
  (flags (:standard -open Simple_utils))
)

(library
 (name ppx_only_interpreter_tags)
 (kind ppx_deriver)
 (modules ppx_only_interpreter_tags)
 (preprocess (pps ppxlib.metaquot))
 (libraries ppxlib))
