(library
 (name memory_proto_alpha)
 (public_name tezos-memory-proto-alpha)
 (libraries
  tezos-protocol-001-PtAtLas.protocol
  octez-protocol-001-PtAtLas-libs.client
  tezos-protocol-001-PtAtLas.parameters
  tezos-protocol-001-PtAtLas.protocol.environment
  octez-protocol-001-PtAtLas-libs.test-helpers))
