(executable
 (name test)
 (libraries WasmObjectFile)
)

(rule
 (alias checklld)
  (target .checklld )
  (deps check_lld.sh)
  (action 
   (progn
    (bash ./check_lld.sh)
   )
 )
)

(rule 
 (alias wabt)
 (deps get_wabt.sh)
 (targets wasm-validate wasm-interp)
 (action
  (progn
    (bash ./get_wabt.sh)
  )
 )
)

(rule
 (alias runtest)
 (deps test.exe check_lld.sh test_result.sh (alias wabt))
 (action 
  (progn
   (bash ./check_lld.sh)
   (run %{exe:test.exe})
   (run lld -flavor wasm testml.wasm -o test.wasm)
   (run ./wasm-validate test.wasm)
   (bash ./test_result.sh)
  )
 )
)
 