[package]
name = "ligo-runtime-i"
version = "0.1.0"
edition = "2021"

[lib]
name = "ligo_runtime"
path = "src/runtime.rs"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = {version = "1.0", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.3", default-features = false, features = ["serde"] }
wasi = { version = "0.11.0" }
wee_alloc = "0.4.5"
ligo_runtime_macros = { path = "../macros" }
quote = "1.0"