; This library is vendored bits and pieces of the tezos client to reduce footprint

(library
 (name client_utils_008_PtEdo2Zk)
 (public_name client_utils-009-PsFLoren)
 (libraries
  tezos-base
  tezos-stdlib-unix
  tezos-protocol-009-PsFLoren
  tezos-protocol-009-PsFLoren-parameters
  tezos-protocol-environment
  tezos-memory-proto-alpha
  tezos-lwt-result-stdlib
  data-encoding
  tezos-client-base
  simple-utils
  tezos-utils
  tezos-shell-services
  tezos-error-monad)
 (flags
  (:standard -open Simple_utils -open Tezos_base__TzPervasives -open Tezos_client_base)))
