(library
 (name passes)
 (public_name ligo.passes)
 (instrumentation
  (backend bisect_ppx))
 (modules
  pass_type
  errors
  t_arg
  type_abstraction_declaration
  named_fun
  freeze_operators
 )
 (libraries ast_unified syntax_types)
 (inline_tests
  (flags (-stop-on-error)))
 (preprocess
  (pps ppx_deriving.map ppx_sexp_conv ppx_expect ppx_poly_constructor)))
