(library
 (name passes)
 (public_name ligo.passes)
 (instrumentation
  (backend bisect_ppx))
 (modules
  pass_type
  errors
  unit_test_helpers
  t_arg
  type_abstraction_declaration
  named_fun
  freeze_operators
  restrict_t_app
  list_as_function
  match_as_function
  hack_literalize_jsligo
  t_app_michelson_types
  e_rev_app
  reduce_switch
  structural_updates
  returns
  unstate
  assign_transitivity
  multi_bindings
  initial_node_check
  loop_variable
  top_level_restriction
  unify_fun
  constructor_application
  object_to_record
  array_to_tuple
  let_syntax
  generalize_functions
  curry
  linearity
  external_hack
  export_declaration
  import_restriction
  projections
  tuple_as_record
  pattern_restriction
  module_open_restriction
  if_as_pattern_match
 )
 (libraries ast_unified syntax_types)
 (inline_tests
  (flags (-stop-on-error)))
 (preprocess
  (pps ppx_deriving.map ppx_sexp_conv ppx_expect ppx_poly_constructor)))
