(library
 (name ligo_wabt)
 (public_name ligo.wabt)
 (libraries core)
 (c_library_flags
  (-lpthread -lc -lm))
 (modules foo)
 ; (foreign_archives)
 )

(rule
 (targets foo.ml wat2wasm)
 (deps build.sh wabt-1.0.30-macos-12.tar wabt-1.0.30-ubuntu.tar)
 (action
  (progn
   (bash ./build.sh)
   (run touch foo.ml))))
